# vigiabr

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  VigiaBR-PRD-v1.0.html  agent-orchestrator.yaml  index.html  mandatario.html
.claude/: settings.json
.claude/agents/: codebase-analyzer.md  git-operator.md
.claude/commands/: build-feature.md  build-fix.md  build-test.md  build.md  evolve.md  fix.md  git.md  help.md  measure.md  plan-approach.md  plan-explore.md  plan-write.md  (+8 more)
pipeline/: pyproject.toml
pipeline/extraction/: pyproject.toml  scrapy.cfg
pipeline/extraction/bulk/: __init__.py  cnpj_downloader.py  tse_dump_downloader.py
pipeline/extraction/tests/: test_camara_spider.py  test_cnj_spider.py  test_cnpj_downloader.py  test_querido_diario_spider.py  test_senado_spider.py  test_transparencia_spider.py  test_tse_downloader.py
pipeline/extraction/vigiabr_spiders/: __init__.py  middlewares.py  pipelines.py  settings.py
pipeline/extraction/vigiabr_spiders/spiders/: __init__.py  camara_deputados.py  cnj_datajud.py  querido_diario.py  senado_federal.py  transparencia_cgu.py  tse_patrimonio.py
pipeline/processing/: pyproject.toml
pipeline/processing/processing/: __init__.py  __main__.py
pipeline/processing/processing/loaders/: __init__.py  cnpj_local_loader.py  neo4j_loader.py  postgres_loader.py
pipeline/processing/processing/transformers/: __init__.py  base.py  camara.py  cnj.py  cnpj.py  querido_diario.py  senado.py  transparencia.py  tse.py
pipeline/processing/processing/validators/: __init__.py  data_quality.py  pii_hasher.py
pipeline/processing/tests/: test_cli.py  test_transformers.py  test_validators.py
pipeline/schemas/: pyproject.toml
pipeline/schemas/alembic/: alembic.ini  env.py
pipeline/schemas/models/: __init__.py  base.py  bem_patrimonial.py  contrato_gov.py  emenda.py  empresa.py  inconsistencia.py  mandatario.py  partido.py  pessoa_fisica.py  processo_judicial.py  projeto_lei.py  relationships.py  votacao.py
pipeline/schemas/models/raw/: __init__.py  camara_raw.py  cnj_raw.py  cnpj_raw.py  querido_diario_raw.py  senado_raw.py  transparencia_raw.py  tse_raw.py
pipeline/schemas/neo4j/: constraints.cypher  indexes.cypher
pipeline/schemas/pii/: __init__.py
pipeline/schemas/tests/: test_models.py  test_pii.py  test_raw_models.py
(+65 files in other folders)
