[project]
name = "vigiabr-processing"
version = "0.1.0"
description = "Transform, validate, and load pipeline data for VigiaBR"
requires-python = ">=3.12"
dependencies = [
    "vigiabr-schemas",
    "psycopg[binary]>=3.1",
    "neo4j>=5.0",
    "duckdb>=1.0",
]

[tool.uv.sources]
vigiabr-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
