[project]
name = "vigiabr-processing"
version = "0.1.0"
description = "Transform, validate, and load pipeline data for VigiaBR"
requires-python = ">=3.12"
dependencies = [
    "vigiabr-schemas",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "neo4j>=5.0",
    "duckdb>=1.0",
]

[tool.uv.sources]
vigiabr-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["processing"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
